# secret-manager

./: .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac  pm
src/: Makefile.am  main.c  opts.c  opts.h  sm_opts.c  sm_opts.h  str-replace.c  str-replace.h
